[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/screens/authentication.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/register_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/login_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/components/header.tscn" type="PackedScene" id=4]

[node name="Authentication" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" parent="." instance=ExtResource( 4 )]
title_string = "Authentication"

[node name="PanelsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -186.0
margin_right = 300.0
margin_bottom = 291.0
alignment = 1

[node name="OptionsContainer" type="HBoxContainer" parent="PanelsContainer"]
unique_name_in_owner = true
margin_top = 214.0
margin_right = 600.0
margin_bottom = 262.0
size_flags_horizontal = 3

[node name="Login" type="Button" parent="PanelsContainer/OptionsContainer"]
margin_right = 290.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Login"

[node name="Register" type="Button" parent="PanelsContainer/OptionsContainer"]
margin_left = 310.0
margin_right = 600.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Register"

[node name="LoginPanel" parent="PanelsContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
margin_top = 102.0
margin_right = 600.0
margin_bottom = 472.0

[node name="RegisterPanel" parent="PanelsContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
visible = false
margin_top = 368.0
margin_right = 496.0
margin_bottom = 726.0

[connection signal="pressed" from="PanelsContainer/OptionsContainer/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="PanelsContainer/OptionsContainer/Register" to="." method="_on_Register_pressed"]
[connection signal="back_pressed" from="PanelsContainer/LoginPanel" to="." method="_on_LoginPanel_back_pressed"]
[connection signal="back_pressed" from="PanelsContainer/RegisterPanel" to="." method="_on_RegisterPanel_back_pressed"]
